#7 Shopping cart endpoints & DB schema update
